[package]
name = "pymocd" 
version = "2.0.2"
edition = "2024"
authors = ["Guilherme Santos"]
license = "GPL-3.0-or-later"

[lib]
name = "pymocd"
crate-type = ["cdylib"]

[profile.release]
debug = 1

[dependencies]
rand = "0.10.0"                                                   
rayon = "1.11.0"                                                # data parallelism and multi-threading support.
rustc-hash = { version = "2.1.1", default-features = true }     # a fast hash map implementation.
pyo3 = { version = "0.28.2", features = ["extension-module"] }  # Python compatibility
dashmap = "6.1.0"                                               # For concurrent HashMap
rand_chacha = "0.10.0"                                          # ChaCha random number generator
ndarray = "0.17.2"

[package.metadata.maturin]
name = "pymocd"
